--- a/ui/ui-styles.css
+++ b/ui/ui-styles.css
@@ -150,12 +150,9 @@
 
   *,
   *::before,
-  *::after{box-sizing:inherit;}
+  *::after{box-sizing:inherit!important;}
 
-  input,
-  textarea,
-  button{font-family:var(--ui-font-family);}
-
+  :is(input,textarea,button){font-family:var(--ui-font-family);}
   input::-ms-reveal{display:none;}
 }
 
@@ -183,31 +180,6 @@ button{
 
 button:focus-visible:not([disabled]){
   outline-color:var(--ui-color-gray-500);}
-
-button{
-  appearance:none;
-  color:inherit;
-  background:none;
-  border:0;
-  padding:0;
-  margin:0;
-  line-height:1;
-  cursor:pointer;
-  touch-action:manipulation;
-  -webkit-user-select:none;
-  user-select:none;
-
-  &[disabled]{
-    cursor:not-allowed;
-    opacity:0.5;
-    pointer-events:auto;}
-}
-
-[loading]{
-  cursor:default;}
-
-[disabled] *{
-  pointer-events:none;}
 
 /* animations */
 @keyframes rotate360{
